load("@bazel_skylib//rules:expand_template.bzl", "expand_template")

cc_library(
    name = "elune",
    visibility = ["//visibility:public"],
    srcs = [
        "liblua/lapi.c",
        "liblua/lapi.h",
        "liblua/lauxlib.c",
        "liblua/lbaselib.c",
        "liblua/lbitlib.c",
        "liblua/lcode.c",
        "liblua/lcode.h",
        "liblua/lcompatlib.c",
        "liblua/lcorolib.c",
        "liblua/ldblib.c",
        "liblua/ldebug.c",
        "liblua/ldebug.h",
        "liblua/ldo.c",
        "liblua/ldo.h",
        "liblua/ldump.c",
        "liblua/lfunc.c",
        "liblua/lfunc.h",
        "liblua/lgc.c",
        "liblua/lgc.h",
        "liblua/linit.c",
        "liblua/liolib.c",
        "liblua/llex.c",
        "liblua/llex.h",
        "liblua/llimits.h",
        "liblua/lmanip.c",
        "liblua/lmanip.h",
        "liblua/lmathlib.c",
        "liblua/lmem.c",
        "liblua/lmem.h",
        "liblua/loadlib.c",
        "liblua/lobject.c",
        "liblua/lobject.h",
        "liblua/lopcodes.c",
        "liblua/lopcodes.h",
        "liblua/loslib.c",
        "liblua/lparser.c",
        "liblua/lparser.h",
        "liblua/lreadline.c",
        "liblua/lreadline.h",
        "liblua/lsec.c",
        "liblua/lsec.h",
        "liblua/lseclib.c",
        "liblua/lstate.c",
        "liblua/lstate.h",
        "liblua/lstatslib.c",
        "liblua/lstring.c",
        "liblua/lstring.h",
        "liblua/lstrlib.c",
        "liblua/ltable.c",
        "liblua/ltable.h",
        "liblua/ltablib.c",
        "liblua/ltm.c",
        "liblua/ltm.h",
        "liblua/lundump.c",
        "liblua/lundump.h",
        "liblua/lvm.c",
        "liblua/lvm.h",
        "liblua/lzio.c",
        "liblua/lzio.h",
    ],
    hdrs = [
        "liblua/include/lauxlib.h",
        "liblua/include/lua.h",
        "liblua/include/luaconf.h",
        "liblua/include/lualib.h",
    ],
    strip_include_prefix = "liblua/include",
    deps = ["@utf8h"],
    linkopts = ["-ldl"],
)

expand_template(
    name = "generate_luaconf",
    out = "liblua/include/luaconf.h",
    template = "liblua/include/luaconf.h.in",
    substitutions = {
        "#cmakedefine LUA_USE_CXX_EXCEPTIONS": "/* #undef LUA_USE_CXX_EXCEPTIONS */",
        "#cmakedefine LUA_USE_CXX_LINKAGE": "/* #undef LUA_USE_CXX_LINKAGE */",
        "#cmakedefine LUA_USE_LINUX": "#define LUA_USE_LINUX",
        "#cmakedefine LUA_USE_LONGLONG": "/* #undef LUA_USE_LONGLONG */",
        "#cmakedefine LUA_USE_MACOS": "/* #undef LUA_USE_MACOS */",
        "#cmakedefine LUA_USE_POSIX": "#define LUA_USE_POSIX",
        "#cmakedefine LUA_USE_READLINE": "/* #undef LUA_USE_READLINE */",
        "#cmakedefine LUA_USE_SHARED": "/* #undef LUA_USE_SHARED */",
        "#cmakedefine LUA_USE_WINDOWS": "/* #undef LUA_USE_WINDOWS */",
        "#cmakedefine LUAI_BITSINT": "#define LUAI_BITSINT",
        "@LUA_CPATH_ESCAPED@": "",
        "@LUA_DIRSEP_ESCAPED@": "/",
        "@LUA_PATH_ESCAPED@": "./?.lua;build/luarocks/share/lua/5.1/?.lua;build/luarocks/share/lua/5.1/?/init.lua",
        "@LUA_PROGNAME@": "lua5.1",
        "@LUAI_BITSINT@": "32",
        "@PROJECT_VERSION@": "3.1",
    },
)
