cc_library(
    name = "expat",
    visibility = ["//visibility:public"],
    srcs = [
        "expat/lib/ascii.h",
        "expat/lib/asciitab.h",
        "expat/lib/expat.h",
        "expat/lib/iasciitab.h",
        "expat/lib/internal.h",
        "expat/lib/latin1tab.h",
        "expat/lib/nametab.h",
        "expat/lib/siphash.h",
        "expat/lib/utf8tab.h",
        "expat/lib/xmlparse.c",
        "expat/lib/xmlrole.c",
        "expat/lib/xmlrole.h",
        "expat/lib/xmltok.c",
        "expat/lib/xmltok.h",
        "expat/lib/xmltok_impl.h",
    ],
    textual_hdrs = [
        "expat/lib/xmltok_impl.c",
        "expat/lib/xmltok_ns.c",
    ],
)
