load("@bazel_skylib//rules:expand_template.bzl", "expand_template")

cc_library(
    name = "expat",
    visibility = ["//visibility:public"],
    srcs = [
        "expat/lib/ascii.h",
        "expat/lib/asciitab.h",
        "expat/lib/expat.h",
        "expat/lib/expat_config.h",
        "expat/lib/expat_external.h",
        "expat/lib/iasciitab.h",
        "expat/lib/internal.h",
        "expat/lib/latin1tab.h",
        "expat/lib/nametab.h",
        "expat/lib/siphash.h",
        "expat/lib/utf8tab.h",
        "expat/lib/xmlparse.c",
        "expat/lib/xmlrole.c",
        "expat/lib/xmlrole.h",
        "expat/lib/xmltok.c",
        "expat/lib/xmltok.h",
        "expat/lib/xmltok_impl.h",
    ],
    textual_hdrs = [
        "expat/lib/xmltok_impl.c",
        "expat/lib/xmltok_ns.c",
    ],
    includes = ["expat/lib"],
)

expand_template(
    name = "generate_expat_config",
    out = "expat/lib/expat_config.h",
    template = "expat/expat_config.h.cmake",
    substitutions = {
        "#cmakedefine BYTEORDER": "#define BYTEORDER",
        "#cmakedefine HAVE_ARC4RANDOM_BUF": "/* #undef HAVE_ARC4RANDOM_BUF */",
        "#cmakedefine HAVE_ARC4RANDOM": "/* #undef HAVE_ARC4RANDOM */",
        "#cmakedefine HAVE_DLFCN_H": "#define HAVE_DLFCN_H",
        "#cmakedefine HAVE_FCNTL_H": "#define HAVE_FCNTL_H",
        "#cmakedefine HAVE_GETPAGESIZE": "#define HAVE_GETPAGESIZE",
        "#cmakedefine HAVE_GETRANDOM": "#define HAVE_GETRANDOM",
        "#cmakedefine HAVE_INTTYPES_H": "#define HAVE_INTTYPES_H",
        "#cmakedefine HAVE_LIBBSD": "/* #undef HAVE_LIBBSD */",
        "#cmakedefine HAVE_MEMORY_H": "#define HAVE_MEMORY_H",
        "#cmakedefine HAVE_MMAP": "#define HAVE_MMAP",
        "#cmakedefine HAVE_STDINT_H": "#define HAVE_STDINT_H",
        "#cmakedefine HAVE_STDLIB_H": "#define HAVE_STDLIB_H",
        "#cmakedefine HAVE_STRINGS_H": "#define HAVE_STRINGS_H",
        "#cmakedefine HAVE_STRING_H": "#define HAVE_STRING_H",
        "#cmakedefine HAVE_SYSCALL_GETRANDOM": "#define HAVE_SYSCALL_GETRANDOM",
        "#cmakedefine HAVE_SYS_STAT_H": "#define HAVE_SYS_STAT_H",
        "#cmakedefine HAVE_SYS_TYPES_H": "#define HAVE_SYS_TYPES_H",
        "#cmakedefine HAVE_UNISTD_H": "#define HAVE_UNISTD_H",
        "#cmakedefine PACKAGE_BUGREPORT": "#define PACKAGE_BUGREPORT",
        "#cmakedefine PACKAGE_NAME": "#define PACKAGE_NAME",
        "#cmakedefine PACKAGE_STRING": "#define PACKAGE_STRING",
        "#cmakedefine PACKAGE_TARNAME": "#define PACKAGE_TARNAME",
        "#cmakedefine PACKAGE_VERSION": "#define PACKAGE_VERSION",
        "#cmakedefine STDC_HEADERS": "#define STDC_HEADERS",
        "#cmakedefine WORDS_BIGENDIAN": "/* #undef WORDS_BIGENDIAN */",
        "#cmakedefine XML_ATTR_INFO": "/* #undef XML_ATTR_INFO */",
        "#cmakedefine XML_CONTEXT_BYTES": "#define XML_CONTEXT_BYTES",
        "#cmakedefine XML_DEV_URANDOM": "#define XML_DEV_URANDOM",
        "#cmakedefine XML_DTD": "#define XML_DTD",
        "#cmakedefine XML_NS": "#define XML_NS",
        "#cmakedefine off_t @OFF_T@": "/* #undef off_t */",
        "#cmakedefine size_t @SIZE_T@": "/* #undef size_t */",
        "@BYTEORDER@": "1234",
        "@PACKAGE_BUGREPORT@": "expat-bugs@libexpat.org",
        "@PACKAGE_NAME@": "expat",
        "@PACKAGE_STRING@": "expat 2.5.0",
        "@PACKAGE_TARNAME@": "expat",
        "@PACKAGE_VERSION@": "2.5.0",
        "@XML_CONTEXT_BYTES@": "1024",
    },
)
