cc_library(
    name = "luafilesystem",
    visibility = ["//visibility:public"],
    srcs = [
        "src/lfs.c",
        "src/lfs.h",
    ],
    deps = ["@elune"],
)

filegroup(
    name = "files",
    visibility = ["//visibility:public"],
    srcs = [":lfs_so"],
)

cc_shared_library(
    name = "lfs_so",
    deps = [":luafilesystem"],
    shared_lib_name = "lfs.so",
)
