filegroup(
    name = "luassert",
    visibility = ["//visibility:public"],
    srcs = [
        "@say",
        "luassert/array.lua",
        "luassert/assert.lua",
        "luassert/assertions.lua",
        "luassert/formatters/init.lua",
        "luassert/init.lua",
        "luassert/languages/en.lua",
        "luassert/match.lua",
        "luassert/matchers/composite.lua",
        "luassert/matchers/core.lua",
        "luassert/matchers/init.lua",
        "luassert/modifiers.lua",
        "luassert/namespaces.lua",
        "luassert/state.lua",
        "luassert/util.lua",
    ],
)
