cc_library(
    name = "lyaml",
    visibility = ["//visibility:public"],
    srcs = [
        "ext/yaml/emitter.c",
        "ext/yaml/lyaml.h",
        "ext/yaml/parser.c",
        "ext/yaml/scanner.c",
        "ext/yaml/yaml.c",
    ],
    deps = ["@yaml"],
    local_defines = ["VERSION=\\\"wowless\\\""],
)
