cc_library(
    name = "lyaml",
    visibility = ["//visibility:public"],
    srcs = [
        "ext/yaml/emitter.c",
        "ext/yaml/lyaml.h",
        "ext/yaml/parser.c",
        "ext/yaml/scanner.c",
        "ext/yaml/yaml.c",
    ],
    deps = [
        "@elune",
        "@yaml",
    ],
    data = [
        "lib/lyaml/explicit.lua",
        "lib/lyaml/functional.lua",
        "lib/lyaml/implicit.lua",
        "lib/lyaml/init.lua",
    ],
    local_defines = ["VERSION=\\\"wowless\\\""],
)
