load("@//:bazel/lua.bzl", "lua_library")

lua_library(
    name = "penlight",
    visibility = ["//visibility:public"],
    modules = {
        "lua/pl/compat.lua": "pl.compat",
        "lua/pl/dir.lua": "pl.dir",
        "lua/pl/file.lua": "pl.file",
        "lua/pl/lexer.lua": "pl.lexer",
        "lua/pl/path.lua": "pl.path",
        "lua/pl/pretty.lua": "pl.pretty",
        "lua/pl/stringx.lua": "pl.stringx",
        "lua/pl/types.lua": "pl.types",
        "lua/pl/utils.lua": "pl.utils",
    },
    deps = ["@luafilesystem"],
)
