filegroup(
    name = "penlight",
    visibility = ["//visibility:public"],
    srcs = [
        "@luafilesystem",
        "pl/compat.lua",
        "pl/dir.lua",
        "pl/file.lua",
        "pl/lexer.lua",
        "pl/path.lua",
        "pl/pretty.lua",
        "pl/stringx.lua",
        "pl/types.lua",
        "pl/utils.lua",
    ],
)
