cc_library(
    name = "yaml",
    visibility = ["//visibility:public"],
    srcs = [
        "src/api.c",
        "src/dumper.c",
        "src/emitter.c",
        "src/loader.c",
        "src/parser.c",
        "src/reader.c",
        "src/scanner.c",
        "src/writer.c",
        "src/yaml_private.h",
    ],
    hdrs = ["include/yaml.h"],
    strip_include_prefix = "include",
    local_defines = [
        "YAML_VERSION_MAJOR=0",
        "YAML_VERSION_MINOR=2",
        "YAML_VERSION_PATCH=5",
        "YAML_VERSION_STRING=\\\"0.2.5\\\"",
    ],
)
